First commited as before_17269_rev3