@@ -23,15 +23,14 @@ import org.eclipse.core.runtime.ILog;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.jface.dialogs.ErrorDialog;
 import org.eclipse.jface.util.Util;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.swt.widgets.Display;
 import org.eclipse.ui.handlers.HandlerUtil;
 import org.eclipse.ui.internal.ide.IDEInternalPreferences;
 import org.eclipse.ui.internal.ide.IDEWorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEWorkbenchPlugin;
+import org.eclipse.ui.statushandlers.StatusManager;
 
 /**
  * @since 3.106
@@ -44,7 +43,8 @@ public class ShowInSystemExplorerHandler extends AbstractHandler {
 	public static final String ID = "org.eclipse.ui.showIn.systemExplorer"; //$NON-NLS-1$
 
 	private static final String VARIABLE_RESOURCE = "${selected_resource_loc}"; //$NON-NLS-1$
-	private static final String VARIABLE_FOLDER = "${selected_resource_parent}"; //$NON-NLS-1$
+	private static final String VARIABLE_RESOURCE_URI = "${selected_resource_uri}"; //$NON-NLS-1$
+	private static final String VARIABLE_FOLDER = "${selected_resource_parent_loc}"; //$NON-NLS-1$
 
 	/*
 	 * (non-Javadoc)
@@ -81,47 +81,45 @@ public class ShowInSystemExplorerHandler extends AbstractHandler {
 		try {
 			File canonicalPath = getSystemExplorerPath(item);
 			if (canonicalPath == null) {
-				ErrorDialog
-						.openError(
-								Display.getDefault().getActiveShell(),
-								"Could not determine resource location", //$NON-NLS-1$
-								"The system could not determine the selected resource's location.", //$NON-NLS-1$
-								new Status(
-										IStatus.ERROR,
-										IDEWorkbenchPlugin.getDefault()
-												.getBundle().getSymbolicName(),
-										logMsgPrefix
-												+ "Could not determine resource's location.")); //$NON-NLS-1$
+				StatusManager
+						.getManager()
+						.handle(new Status(
+								IStatus.ERROR,
+								IDEWorkbenchPlugin.getDefault().getBundle()
+										.getSymbolicName(),
+								logMsgPrefix
+										+ IDEWorkbenchMessages.ShowInSystemExplorerHandler_notDetermineLocation),
+								StatusManager.SHOW | StatusManager.LOG);
 				return null;
 			}
 			String launchCmd = formShowInSytemExplorerCommand(canonicalPath);
 
 			if ("".equals(launchCmd)) { //$NON-NLS-1$
-				ErrorDialog
-						.openError(
-								Display.getDefault().getActiveShell(),
-								"System explorer is not set", //$NON-NLS-1$
-								"Please set the system explorer command in the workbench preferences.", //$NON-NLS-1$
-								new Status(IStatus.ERROR, IDEWorkbenchPlugin
-										.getDefault().getBundle()
-										.getSymbolicName(), logMsgPrefix
-										+ "Command for launching is not set.")); //$NON-NLS-1$
+				StatusManager
+						.getManager()
+						.handle(new Status(
+								IStatus.ERROR,
+								IDEWorkbenchPlugin.getDefault().getBundle()
+										.getSymbolicName(),
+								logMsgPrefix
+										+ IDEWorkbenchMessages.ShowInSystemExplorerHandler_commandUnavailable),
+								StatusManager.SHOW | StatusManager.LOG);
 				return null;
 			}
 
-			log.log(new Status(IStatus.INFO, IDEWorkbenchPlugin.getDefault()
-					.getBundle().getSymbolicName(), launchCmd));
-
-			Process p = Runtime.getRuntime().exec(launchCmd, null,
-					item.getWorkspace().getRoot().getLocation().toFile());
+			File dir = item.getWorkspace().getRoot().getLocation().toFile();
+			Process p;
+			if (Util.isLinux() || Util.isMac()) {
+				p = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", launchCmd }, null, dir); //$NON-NLS-1$ //$NON-NLS-2$
+			} else {
+				p = Runtime.getRuntime().exec(launchCmd, null, dir);
+			}
 			int retCode = p.waitFor();
-			if (retCode != 0) {
-				log.log(new Status(
-						IStatus.ERROR,
-						IDEWorkbenchPlugin.getDefault().getBundle()
-								.getSymbolicName(),
-						logMsgPrefix
-								+ "Execution of launch command failed with return code: " + retCode)); //$NON-NLS-1$
+			if (retCode != 0 && !Util.isWindows()) {
+				log.log(new Status(IStatus.ERROR, IDEWorkbenchPlugin
+						.getDefault().getBundle().getSymbolicName(),
+						logMsgPrefix + "Execution of '" + launchCmd //$NON-NLS-1$
+								+ "' failed with return code: " + retCode)); //$NON-NLS-1$
 			}
 		} catch (Exception e) {
 			log.log(new Status(IStatus.ERROR, IDEWorkbenchPlugin.getDefault()
@@ -142,12 +140,23 @@ public class ShowInSystemExplorerHandler extends AbstractHandler {
 	private String formShowInSytemExplorerCommand(File path) throws IOException {
 		String command = IDEWorkbenchPlugin.getDefault().getPreferenceStore()
 				.getString(IDEInternalPreferences.WORKBENCH_SYSTEM_EXPLORER);
-		command = Util.replaceAll(command, VARIABLE_RESOURCE, path.getCanonicalPath());
+		
+		command = Util.replaceAll(command, VARIABLE_RESOURCE, quotePath(path.getCanonicalPath()));
+		command = Util.replaceAll(command, VARIABLE_RESOURCE_URI, path.getCanonicalFile().toURI().toString());
 		File parent = path.getParentFile();
 		if (parent != null) {
-			command = Util.replaceAll(command, VARIABLE_FOLDER, parent.getCanonicalPath());
+			command = Util.replaceAll(command, VARIABLE_FOLDER, quotePath(parent.getCanonicalPath()));
 		}
 		return command;
+	}
+
+	private String quotePath(String path) {
+		if (Util.isLinux() || Util.isMac()) {
+			// Quote for usage inside "", man sh, topic QUOTING:
+			path = path.replaceAll("[\"$`]", "\\\\$0"); //$NON-NLS-1$ //$NON-NLS-2$
+		}
+		// Windows: Can't quote, since explorer.exe has a very special command line parsing strategy.
+		return path;
 	}
 
 	/**
@@ -177,11 +186,11 @@ public class ShowInSystemExplorerHandler extends AbstractHandler {
 	 */
 	public static String getDefaultCommand() {
 		if (Util.isGtk()) {
-			return IDEWorkbenchMessages.ShowInSystemExplorerHandler_LinuxDefaultCommand;
+			return "dbus-send --print-reply --dest=org.freedesktop.FileManager1 /org/freedesktop/FileManager1 org.freedesktop.FileManager1.ShowItems array:string:\"${selected_resource_uri}\" string:\"\""; //$NON-NLS-1$
 		} else if (Util.isWindows()) {
-			return IDEWorkbenchMessages.ShowInSystemExplorerHandler_Win32DefaultCommand;
+			return "explorer /E,/select=${selected_resource_loc}"; //$NON-NLS-1$
 		} else if (Util.isMac()) {
-			return IDEWorkbenchMessages.ShowInSystemExplorerHandler_MacOSXDefaultCommand;
+			return "open -R \"${selected_resource_loc}\""; //$NON-NLS-1$
 		}
 
 		// if all else fails, return empty default
